# php-ext-gameshark-extension

./: .gitignore  Makefile.frag  README.md  SUPPORTED.md  config.m4  gameshark.c  gameshark_core.h  package.xml  php_gameshark.h
docs/: install.md  release.md
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: build-unix.sh  gameshark-unused-aggregate-report.php  package-binary-unix.sh  package-source.sh  smoke-load.sh
tests/: 001-load.phpt  002-inactive-without-env.phpt  003-paired-compare.phpt  004-side-replacement.phpt  005-trace-values.phpt  006-trace-numeric.phpt  007-trace-combined-mode.phpt  008-trace-stack-args.phpt  009-json-report-untruncated.phpt  010-default-text-color.phpt  011-human-trace-format.phpt  012-trace-follow-transforms.phpt  013-invariants-basic.phpt  014-invariants-exceptions.phpt  015-invariants-invalid-config.phpt  016-invariants-builtins-basic.phpt  017-invariants-builtins-exceptions.phpt  018-invariants-wp-error-stdout.phpt  019-trace-allow-pattern.phpt  020-unused-basic.phpt  021-unused-generated-matrix.phpt  022-unused-report-selection.phpt  023-unused-request-privacy.phpt  024-unused-included-files.phpt  025-ini-trace-config.phpt  026-storage-status.phpt  027-unused-aggregate-report.phpt
