[package]
name = "gameshark_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
backend-mysql = ["dep:mysql"]
backend-redis = ["dep:redis", "redis/tls-rustls"]
all = ["sqlite", "backend-mysql", "backend-redis"]

[profile.release]
panic = "abort"

[dependencies]
mysql = { version = "28", default-features = false, features = ["minimal-rust", "rustls-tls"], optional = true }
regex = "1"
redis = { version = "1.2", default-features = false, optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
